--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}سامانه سفارش انبار شیرینی بی بی{% endblock %}</title>
     {% load static %}
     {% load workflow_filters %}
+    {% load jdate_filters %}
     <!-- Bootstrap RTL CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css">
     <!-- FontAwesome -->
