--- a/templates/workflow/reports_dashboard.html
+++ b/templates/workflow/reports_dashboard.html
@@ -111,7 +111,7 @@
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
-                                                <span><i class="fas fa-check-circle mr-2"></i> تحویل داده شده:</span>
+                                                <span><i class="fas fa-check-circle mr-2"></i> تحویل راننده شده:</span>
                                                 <span class="badge badge-success">{{ delivered_orders }}</span>
                                             </div>
                                         </div>
