--- a/templates/workflow/orders_report.html
+++ b/templates/workflow/orders_report.html
@@ -81,7 +81,7 @@
                             <td>{{ order.id }}</td>
                             <td>{{ order.requester.get_full_name|default:order.requester.username }}</td>
                             <td>{{ order.requester.branch_name|default:"-" }}</td>
-                            <td>{{ order.created_at|to_jalali }}</td>
+                            <td>{{ order.order_date|to_jalali }}</td>
                             <td>{{ order.items.count }}</td>
                             <td>
                                 {% if order.status == 'PENDING' %}
