--- a/templates/workflow/login.html
+++ b/templates/workflow/login.html
@@ -27,7 +27,7 @@
                     </form>
                 </div>
                 <div class="card-footer text-center">
-                    <p class="mb-0">حساب کاربری ندارید؟ <a href="{% url 'register' %}">ثبت نام کنید</a></p>
+                    <p class="mb-0">لطفا نام کاربری و رمز عبور خود را وارد کنید</p>
                 </div>
             </div>
         </div>
