--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -42,9 +42,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">ورود</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'register' %}">ثبت نام</a>
-                        </li>
                     {% endif %}
                 </ul>
             </div>
@@ -88,12 +85,6 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link {% if request.resolver_match.url_name == 'product-list' %}active{% endif %}" 
-                                       href="{% url 'product-list' %}">
-                                        <i class="fas fa-boxes"></i> کالاها
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link {% if request.resolver_match.url_name == 'unit-list' %}active{% endif %}" 
                                        href="{% url 'unit-list' %}">
                                         <i class="fas fa-ruler"></i> واحدها
@@ -108,6 +99,18 @@
                             {% endif %}
                             
                             {% if user.role == 'ACCOUNTANT' or user.role == 'ADMIN' %}
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'product-list' %}active{% endif %}" 
+                                       href="{% url 'product-list' %}">
+                                        <i class="fas fa-boxes"></i> کالاها
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'unit-list' %}active{% endif %}" 
+                                       href="{% url 'unit-list' %}">
+                                        <i class="fas fa-ruler"></i> واحدها
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link {% if request.resolver_match.url_name == 'reports-dashboard' %}active{% endif %}" 
                                        href="{% url 'reports-dashboard' %}">
